--- a/form.css
+++ b/form.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 main {
     display: flex;
 }
@@ -16,19 +20,21 @@ main {
 form {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 3rem;
     height: 100%;
     width: 100%;
-    padding-top: 3rem;
-    padding-left: 4rem;
+    padding: 3rem 5rem;
 }
 
 .form-row {
+    flex-shrink: 1;
     display: flex;
     gap: 4rem;
 }
 
 .form-elem {
+    flex-shrink: 1;
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
@@ -44,13 +50,20 @@ form {
     background-color: #FFFFFF;
     border: 1px solid #D6D9DC;
     border-radius: 3px;
-    width: 300px;
-    padding: 7px;
+    width: 18rem;
+    padding: 0.5rem;
+}
+
+input:valid {
+    border-color:  rgb(54, 235, 54);
+}
+
+input:invalid {
+    border-color:  red;
 }
 
 .left-container {
     width: 37vw;
-    height: 100vh;
     background-image: url('bgImage.png');
     background-size: cover;
     background-position: center;
@@ -63,7 +76,7 @@ form {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
-    top: 250px;
+    top: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,7 +105,7 @@ form {
 }
 
 .top-right {
-    height: 30vh;
+    min-height: 30vh;
     width: 100%;
     background-color: aliceblue;
     font-size: 1.6rem;
@@ -101,16 +114,13 @@ form {
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
-    padding-left: 6rem;
+    padding: 3rem 4rem;
 }
 
-.top-right p:first-child {
-    padding-top: 4rem;
-}
 
 .mid-right {
-    height: 45vh;
-    box-shadow: 5px 15px 10px black;
+    min-height: 45vh;
+    box-shadow: inset 1px 1px 5px rgb(36, 35, 35);
 }
 
 .mid-right > h2 {
@@ -119,7 +129,27 @@ form {
 }
 
 .bot-right {
-    height: 25vh;
+    min-height: 35vh;
     width: 100%;
     background-color: aliceblue;
+    padding: 2rem 4rem;
+    font-weight: 600;
+}
+
+.bot-right > button {
+    height: 3rem;
+    width: 16rem;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    background-color: rgb(25, 74, 100);
+    border-radius: 6px;
+    color: azure;
+}
+
+.bot-right > p {
+    color: black;
+}
+
+.bot-right > a {
+    color: rgb(17, 17, 85);
 }
