--- a/form.css
+++ b/form.css
@@ -120,7 +120,6 @@ input:invalid {
 
 .mid-right {
     min-height: 45vh;
-    box-shadow: inset 1px 1px 5px rgb(36, 35, 35);
 }
 
 .mid-right > h2 {
@@ -134,6 +133,7 @@ input:invalid {
     background-color: aliceblue;
     padding: 2rem 4rem;
     font-weight: 600;
+    box-shadow: 1px 1px 5px rgb(36, 35, 35);
 }
 
 .bot-right > button {
